--- a/CV1.css
+++ b/CV1.css
@@ -1,8 +1,57 @@
-h1
-{
-    color: mediumpurple;
+ *{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
 }
-h3
-{
-    color: rebeccapurple;
+
+body {
+background: linear-gradient(rgb(50, 50, 50), rgb(200, 200, 200));
+z-index: 1;
+color: mediumpurple;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+font-size: 130%
+}
+
+/* en tête */
+
+#en-tete {
+background-color: rgb(127, 127, 127);
+height: 40vh;
+width: 100%;
+text-align: center;
+align-items: center;
+}
+
+#photo {
+border-radius: 100%;
+width: 10%;
+}
+
+/* à propos de moi */
+
+#a_propos {
+width: 100%;
+}
+
+/* formation */
+
+#formation {
+display: flex;
+width: 100%;
+height: 40vh;
+align-items: center;
+text-align: center;
+}
+
+#formation div {
+display: flex;
+width: 30%;
+align-items: center;
+text-align: center;
+}
+
+#texte_formation {
+margin-left: 5%;
+margin-right: 5%;
+font-size: 110%;
 }
