--- a/CV1.css
+++ b/CV1.css
@@ -7,9 +7,32 @@ box-sizing: border-box;
 body {
 background: linear-gradient(rgb(50, 50, 50), rgb(200, 200, 200));
 z-index: 1;
-color: mediumpurple;
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+color: darkslategrey;
+font-family: 'Times New Roman', 'Arial Narrow', Arial, sans-serif;
 font-size: 130%
+}
+
+h1{
+    margin: 0 0 1rem;
+    font-size:  2.5rem;
+    margin-bottom: .5rem;
+    color: mediumpurple;
+}
+
+h2{
+    margin: 0 0 1rem;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: hotpink;
+}
+
+cv-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: "left-column right-column right-column";
+    width: 1200px;
+    margin: 100px auto;
+    box-shadow: 0 1px 3px rgba(0,0,0,0,12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 /* en tête */
