--- a/CV1.css
+++ b/CV1.css
@@ -7,7 +7,7 @@ box-sizing: border-box;
 body {
 background: linear-gradient(rgb(50, 50, 50), rgb(200, 200, 200));
 z-index: 1;
-color: darkslategrey;
+color: beige ;
 font-family: 'Times New Roman', 'Arial Narrow', Arial, sans-serif;
 font-size: 130%
 }
