--- a/CV1.css
+++ b/CV1.css
@@ -1,53 +1,69 @@
- *{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
+/* GENERAL */
+*{
+  margin: 0;
+  box-sizing: border-box;
 }
 
-body {
-background: linear-gradient(rgb(50, 50, 50), rgb(200, 200, 200));
-z-index: 1;
-color: floralwhite;
-font-family: 'Times New Roman', 'Arial Narrow', Arial, sans-serif;
-font-size: 130%
+body{
+  font-family: Roboto;
+  font-weight: 300;
+  font-size: .9rem;
+  line-height: 1.5;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
+
+a:hover{
+  text-decoration: underline;
+}
+
+p{
+  margin: 0 0 1rem;
 }
 
 h1{
-    margin: 0 0 1rem;
-    font-size:  2.5rem;
-    margin-bottom: .5rem;
-    color: mediumpurple;
+  margin: 0 0 1rem;
+  font-size: 2.5rem;
+  margin-bottom: .5rem;
+  color:  lightpink;
 }
 
 h2{
-    margin: 0 0 1rem;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: hotpink;
+  margin: 0 0 1rem;
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
 
-cv-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: "left-column right-column right-column";
-    width: 1200px;
-    margin: 100px auto;
-    box-shadow: 0 1px 3px rgba(0,0,0,0,12), 0 1px 2px rgba(0,0,0,0.24);
+.text-blue{
+  color: #4472C4;
 }
 
-/* en tête */
-
-#en-tete {
-background-color: rgb(127, 127, 127);
-height: 40vh;
-width: 100%;
-text-align: center;
-align-items: center;
+.text-darkblue{
+  color: #002060;
 }
 
-#photo {
-border-radius: 100%;
-width: 10%;
+.text-uppercase{
+  text-transform: uppercase; 
+}
+
+.icon{
+  margin-right: .5rem;
+}
+
+.cv-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas: "left-column right-column right-column";
+  width: 1200px;
+  margin: 100px auto;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.section{
+  margin-bottom: 1.5rem;
 }
 
 /* LEFT COLUMN */
@@ -82,4 +98,30 @@ width: 10%;
   grid-template-areas: 
     "header"
     "content";
+}
+
+/* HEADER */
+.header{
+  grid-area: header;
+  padding: 50px;
+  background-color: #F2F2F2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.infos{
+  columns: 2;
+  list-style-type: none;
+  padding: 0;
+}
+
+/* CONTENT */
+.content{
+  grid-area: content;
+  padding: 50px;
+}
+
+.experience-list{
+  list-style-type: circle;
 }
