--- a/CV1.css
+++ b/CV1.css
@@ -9,41 +9,11 @@ body{
   font-weight: 300;
   font-size: .9rem;
   line-height: 1.5;
-  background-attachment: fixed;
-  background-image: url("blue.jpeg");
-}
-
-header {
-  height:400px;
-  background-image:url(images/docaposte.jpeg);
-  border:1px solid #CCC;
-  width:1000px;
-  margin:0px auto;
-  position: relative;
-}
-
-#header h1{
-  color:white;
-  text-align: center
-}
-
-h1{
-    margin: 0 0 1rem;
-    font-size:  2.5rem;
-    margin-bottom: .5rem;
-    color: lightpink;
-}
-
-h2{
-    margin: 0 0 1rem;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: purple;
 }
 
 a{
   text-decoration: none;
-  color: #4472C4;
+  color: black;
 }
 
 a:hover{
@@ -52,6 +22,19 @@ a:hover{
 
 p{
   margin: 0 0 1rem;
+}
+
+h1{
+  margin: 0 0 1rem;
+  font-size: 2.5rem;
+  margin-bottom: .5rem;
+  color:  lightpink;
+}
+
+h2{
+  margin: 0 0 1rem;
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
 
 .cv-container{
@@ -67,11 +50,17 @@ p{
   margin-bottom: 1.5rem;
 }
 
+/* IMAGE */
+img{
+  height: 20;
+  width: 20;
+}
+
 /* LEFT COLUMN */
 .left-column{
   grid-area: left-column;
   padding: 50px;
-  background-color: lightpink;
+  background-color: #4472C4;
   color: white;
 }
 
@@ -105,11 +94,34 @@ p{
 .header{
   grid-area: header;
   padding: 50px;
-  background-color: lightslategray;
+  background-color: #F2F2F2;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
+
+.infos{
+  columns: 2;
+  list-style-type: none;
+  padding: 0;
+}
+
+/* FOOTER */
+.footer{
+  grid-area: header;
+  padding: 50px;
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.infos{
+  columns: 2;
+  list-style-type: none;
+  padding: 0;
+}
+
 
 /* CONTENT */
 .content{
@@ -117,10 +129,6 @@ p{
   padding: 50px;
 }
 
-/* FOOTER */
-#footer {
-   position:absolute;
-   bottom:0;  /* on le colle en bas */
-   width:100%;
-   height:100px;   /* Hauteur du pied de page */
+.experience-list{
+  list-style-type: circle;
 }
