--- a/controle-PW-Lemonnier-2022/ex1.css
+++ b/controle-PW-Lemonnier-2022/ex1.css
@@ -1,3 +1,38 @@
+/* GENERAL */
+*{
+  margin: 0px;
+  box-sizing: border-box;
+}
+
+/* TITRE */
+h1{
+  margin: 0 0 1rem;
+  font-size:  2.5rem;
+  margin-bottom: .5rem;
+  color: black;
+  margin: 0 0 1rem;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+}
+
+
+
+/* ENCADREMENT */
+box1 {
+  list-style-type: none;
+  padding: 0;
+  font-size: 1.1rem;
+  letter-spacing: 0.5px;
+  margin: 0 0 1rem;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+}
+
+box2
 shadowbox {
   width: 15em;
   border: 1px solid #333;
