--- a/controle-PW-Lemonnier-2022/ex1.css
+++ b/controle-PW-Lemonnier-2022/ex1.css
@@ -17,29 +17,23 @@ h1{
   border-bottom: 2px solid black;
 }
 
-/* ENCADREMENT */
-box1 {
-  list-style-type: none;
-  padding: 0;
-  font-size: 1.1rem;
-  letter-spacing: 0.5px;
-  margin: 0 0 1rem;
-  border-left: 2px solid black;
-  border-right: 2px solid black;
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
+/* BOITES DE TEXTES */
+gauche {
+  border-width: 1px;
+  border-style: dotted;
+  border-color: black;
 }
 
-box2{
-    list-style-type: none;
-  padding: 0;
-  font-size: 1.1rem;
-  letter-spacing: 0.5px;
-  margin: 0 0 1rem;
-  border-left: 2px solid black;
-  border-right: 2px solid black;
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
+centre{
+  border-width: 1px;
+  border-style: dotted;
+  border-color: black;
+}
+
+droite{
+  border-width: 1px;
+  border-style: dotted;
+  border-color: black;
 }
 
 darkgreybox {
@@ -49,3 +43,4 @@ darkgreybox {
   padding: 8px 12px;
   background-image: linear-gradient(180deg, #fff, #ddd 40%, #ccc);
 }
+
