--- a/controle-PW-Lemonnier-2022/ex1.css
+++ b/controle-PW-Lemonnier-2022/ex1.css
@@ -19,9 +19,10 @@ h1{
 
 /* BOITES DE TEXTES */
 gauche {
-  border-width: 1px;
-  border-style: dotted;
+  border-width: 3px 3px 3px 1px;
+  border-style: solid dotted;
   border-color: black;
+  padding: 0 10px;
 }
 
 centre{
