--- a/controle-PW-Lemonnier-2022/ex1.css
+++ b/controle-PW-Lemonnier-2022/ex1.css
@@ -21,10 +21,10 @@
   margin-right: 20px;
   margin-bottom: 10px;
   margin-top: 10px;
-  width: 300px;
+  width: 250px;
   height: 400px;
   float: letf;
-  border-width: 3px 3px 3px 1px;
+  border-width: 3px 1px 3px 3px;
   border-style: solid ;
   border-color: hotpink;
   padding: 0 10px;
@@ -33,7 +33,7 @@
 
 .titre1{
     margin: 0 0 1rem;
-    font-size:  2.5rem;
+    font-size:  2rem;
     margin-bottom: .5rem;
     color: lightpink;
 }
@@ -53,9 +53,9 @@
   margin-bottom: 10px;
   margin-top: 10px;
   width: 500px;
-  height: 500px;
+  height: 450px;
   float: center;
-  border-width: 1px;
+  border-width: 3px 3px 3px 1px;
   border-style: dotted;
   border-color: mediumpurple;
   background-color: darkgrey;
@@ -84,7 +84,7 @@
   width: 200px;
   height: 200px;
   float: right;
-  border-width: 1px;
+  border-width: 3px 3px 3px 1px
   border-style: solid;
   border-color: greenyellow;
   background-color: lightgrey;
@@ -97,7 +97,7 @@
 /*BAS*/
 .bas{
   width: 100%;
-  height: 100%;
+  height: 700;
   float: bottom;
   border-width: 1px;
   border-style: solid;
