--- a/controle-PW-Lemonnier-2022/ex1.css
+++ b/controle-PW-Lemonnier-2022/ex1.css
@@ -12,7 +12,7 @@
   width: 1000px;
   margin: 10px auto;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  background-color: #FEEED1;
+  background-color: whitesmoke;
 }
 
 /*GAUCHE*/
@@ -26,16 +26,25 @@
   float: letf;
   border-width: 3px 1px 3px 3px;
   border-style: solid ;
-  border-color: hotpink;
+  border-color: black;
   padding: 0 10px;
   background-color: lightgrey;
 }
 
 .titre1{
+    border-width: 3px 1px 1px 3px;
+    border-style: solid ;
+    border-bottom-color: lightgrey;
+    border-right-color: lightgrey;
+    border-left-color: black;
+    border-top-color: black;
+    padding: 0 10px;
+    background-color: whitesmoke;
     margin: 0 0 1rem;
-    font-size:  2rem;
+    font-size:  1rem;
     margin-bottom: .5rem;
-    color: lightpink;
+    margin-top: 10px;
+    color: black;
 }
 
 .texte1{
@@ -61,6 +70,19 @@
   background-color: darkgrey;
 }
 
+.titre2{
+    border-width: 3px 1px 1px 3px;
+    border-style: solid ;
+    border-color: lightgrey;
+    padding: 0 10px;
+    background-color: whitesmoke;
+    margin: 0 0 1rem;
+    font-size:  1rem;
+    margin-bottom: .5rem;
+    margin-top: 10px;
+    color: black;
+}
+
 .textehaut{
   margin-bottom: 30px;
   margin-top: 30px;
@@ -81,6 +103,10 @@
 
 /*DROITE*/
 .droite{
+  margin-left: 10px;
+  margin-right: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
   width: 200px;
   height: 200px;
   float: right;
