--- a/controle-PW-Lemonnier-2022/ex1.css
+++ b/controle-PW-Lemonnier-2022/ex1.css
@@ -64,23 +64,28 @@
   width: 500px;
   height: 450px;
   float: center;
-  border-width: 3px 3px 3px 1px;
+  border-width: 3.5px 3.5px 3.5px 3.5px;
   border-style: dotted;
-  border-color: mediumpurple;
+  border-color: black;
   background-color: darkgrey;
 }
 
 .titre2{
-    border-width: 3px 1px 1px 3px;
+    border-width: 1px 1px 1px 1px;
     border-style: solid ;
     border-color: lightgrey;
     padding: 0 10px;
     background-color: whitesmoke;
     margin: 0 0 1rem;
+    margin-left: 25%;
+    margin-right: 25%;
     font-size:  1rem;
     margin-bottom: .5rem;
     margin-top: 10px;
     color: black;
+    width: 50%;
+    align-content: center;
+    text-align: center;
 }
 
 .textehaut{
@@ -91,6 +96,9 @@
   border-style: solid;
   border-color: mediumpurple;
   background-color: darkgrey;
+  border-width: 2px 0px 0px 0px;
+  border-style: solid ;
+  border-color: black;
 }
 
 .textebas{
@@ -99,7 +107,10 @@
   border-style: dotted;
   border-color: mediumpurple;
   background-color: darkgrey;
-}
+  border-width: 0px 0px 2px 0px;
+  border-style: solid ;
+  border-color: black;
+}}
 
 /*DROITE*/
 .droite{
