--- a/controle-PW-Lemonnier-2022/ex1.css
+++ b/controle-PW-Lemonnier-2022/ex1.css
@@ -80,8 +80,8 @@
     margin-left: 25%;
     margin-right: 25%;
     font-size:  1rem;
-    margin-bottom: .5rem;
-    margin-top: 10px;
+    margin-bottom: 20px;
+    margin-top: 20px;
     color: black;
     width: 50%;
     align-content: center;
@@ -89,9 +89,10 @@
 }
 
 .textehaut{
-  margin-bottom: 30px;
-  margin-top: 30px;
+  margin-bottom: 50px;
+  margin-top: 50px;
   text-align: justify;
+  font-family: Times New Roman;
   border-width: 1px;
   border-style: solid;
   border-color: black;
@@ -99,10 +100,20 @@
   border-width: 2px 0px 0px 0px;
   border-style: solid ;
   border-color: black;
-  font-family: Times New Roman;
+}
+
+.titre3{
+  text-align: right;
+  font-style: italic;
+  font-style: oblique;
 }
 
 .textebas{
+  height: 200px;
+  margin-bottom: 100px;
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-left: 10px;
   text-align: center;
   border-width: 1px;
   border-style: dotted;
