--- a/controle-PW-Lemonnier-2022/ex1.css
+++ b/controle-PW-Lemonnier-2022/ex1.css
@@ -13,6 +13,7 @@
   margin: 10px auto;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   background-color: whitesmoke;
+  flex
 }
 
 /*GAUCHE*/
@@ -54,6 +55,7 @@
   font-weight: 300;
   font-size: .9rem;
   line-height: 1.5;
+  line-height: 160%;
 }
 
 /*CENTRE*/
@@ -105,6 +107,7 @@
   border-color: black;
   padding-right: 20px;
   padding-left: 20px;
+  line-height: 160%;
 }
 
 .titre3{
@@ -128,6 +131,8 @@
   border-style: solid ;
   border-color: black;
   font-family: Times New Roman;
+  line-height: 160%;
+  padding: 0 0px;
 }
 
 .box{
@@ -140,6 +145,10 @@
   border-width: 1px;
   border-style: dotted;
   border-color: black;
+  border-top: none;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+  border-bottom: none;
 }
 
 /*DROITE*/
@@ -160,6 +169,7 @@
 .texte2{
   text-align: right;
   font-family: Times New Roman;
+  line-height: 160%;
 }
 
 .titre4{
