--- a/controle-PW-Lemonnier-2022/ex1.css
+++ b/controle-PW-Lemonnier-2022/ex1.css
@@ -14,7 +14,6 @@
   margin: 10px auto;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   background-color: whitesmoke;
-  
 }
 
 /*GAUCHE*/
@@ -198,10 +197,40 @@
   width: 1000px;
   height: 160px;
   float: bottom;
-  border-width: 1px;
+  border-width: 1px 3px 1px 3px;
+  border-bottom-color: lightgrey;
+  border-right-color: black;
+  border-left-color: black;
+  border-top-color: lightgrey;
   border-style: solid;
-  border-color: black;
   background-color: #D3CECD;
   margin-left: 10em;
+}
 
+.texte3{
+  text-align: center;
+  font-family: Times New Roman;
+  line-height: 160%;
+  margin-left: 70px;
+  margin-right: 70px;
+}
+
+.titre5{
+    border-width: 1px 1px 1px 1px;
+    border-style: solid ;
+    border-bottom-color: lightgrey;
+    border-right-color: lightgrey;
+    border-left-color: lightgrey;
+    border-top-color: lightgrey;
+    padding: 0 10px;
+    background-color: whitesmoke;
+    margin: 0 0 1rem;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size:  1rem;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    color: black;
+    width: content;
+    text-align: center;
 }
