--- a/controle-PW-Lemonnier-2022/ex2.css
+++ b/controle-PW-Lemonnier-2022/ex2.css
@@ -38,14 +38,14 @@ h1{
     margin: 0 0 1rem;
     font-size:  2.5rem;
     margin-bottom: .5rem;
-    color: lightpink;
+    color: royalblue;
 }
 
 h2{
     margin: 0 0 1rem;
     letter-spacing: 1px;
     text-transform: uppercase;
-    color: hotpink;
+    color: lightskyblue;
     text-shadow: 6px 6px 6px mediumpurple;
 }
 
@@ -61,7 +61,7 @@ h4{
     margin:  0 0 1rem;
     letter-spacing: 0.5px;
     text-transorm:  uppercase;
-    color: lightpink;
+    color: skyblue;
 }
 
 a{
