--- a/controle-PW-Lemonnier-2022/ex2.css
+++ b/controle-PW-Lemonnier-2022/ex2.css
@@ -95,7 +95,7 @@ p{
 .left-column{
   grid-area: left-column;
   padding: 50px;
-  background-color: lightpink;
+  background-color: lightskyblue;
   color: white;
 }
 
