--- a/controle-PW-Lemonnier-2022/ex2.css
+++ b/controle-PW-Lemonnier-2022/ex2.css
@@ -118,7 +118,7 @@ p{
   border-right: 2px solid black;
   border-top: 2px solid black;
   border-bottom: 2px solid black;
-  box-shadow: 6px 6px 0px hotpink;
+  box-shadow: 6px 6px 0px royalblue;
 }
 
 .sommaire{
