--- a/controle-PW-Lemonnier-2022/ex2.css
+++ b/controle-PW-Lemonnier-2022/ex2.css
@@ -24,15 +24,6 @@ body{
             padding: 0px;
             margin-top: 10px;
             }
-#banbas{
-            position: absolute;
-            left: 0px;
-            right: 0px;
-            width: 100%;
-            height: 100px;
-            margin-top: 1530px;
-            margin-bottom: 100px;
-            }
 
 h1{
     margin: 0 0 1rem;
@@ -57,13 +48,6 @@ h3{
     color: darkblue;
 }
 
-h4{
-    margin:  0 0 1rem;
-    letter-spacing: 0.5px;
-    text-transorm:  uppercase;
-    color: skyblue;
-}
-
 a{
   text-decoration: none;
   color: black;
@@ -74,10 +58,11 @@ a:hover{
 }
 
 p{
-  margin: 0 0 1rem;
+  margin-left: 2px;
+  margin-right: 2px;
 }
 
-.cv-container{
+.conference-container{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-areas: "left-column right-column right-column";
