--- a/controle-PW-Lemonnier-2022/ex2.css
+++ b/controle-PW-Lemonnier-2022/ex2.css
@@ -33,7 +33,9 @@ h1{
 }
 
 h2{
-    margin: 0 0 1rem;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-left: 5px;
     letter-spacing: 1px;
     text-transform: uppercase;
     color: lightskyblue;
